--- a/base/compute-resources.yaml
+++ b/base/compute-resources.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   hard:
     requests.cpu: 200m
-    requests.memory: 512m
+    requests.memory: 512Mi
     limits.cpu: 1000m
     limits.memory: 2Gi
     requests.storage: 50Gi
