--- a/overlays/dev/set_resource.yaml
+++ b/overlays/dev/set_resource.yaml
@@ -8,5 +8,5 @@ spec:
     requests.cpu: 200m
     requests.memory: 512Mi
     limits.cpu: 200m
-    limits.memory: 512Gi
+    limits.memory: 512Mi
     requests.storage: 10Gi
