feat: 部署 plutus 集群

--- a/.github/workflows/tags.yaml
+++ b/.github/workflows/tags.yaml
@@ -15,5 +15,5 @@ jobs:
       - name: apply kustomize config
         uses: steebchen/kubectl@v2.0.0
         with:
-          config: ${{ secrets.TKE_CONFIG_DATA_CD }}
-          command: apply -k overlays/production-hubble/
+          config: ${{ secrets.TKE_CONFIG_DATA_NJ }}
+          command: apply -k overlays/production-plutus/
